base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eddie-register-app-deployment
  labels:
    app: eddie-register-app
spec:
  selector:
    matchLabels:
      app: eddie-register-app
  template:
    metadata:
      labels:
        app: eddie-register-app
    spec:
      containers:
      - name: eddie-register-app
        image: eddiebyte/eddie-register-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /home.jsp
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /home.jsp
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
